--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "gulp; node index.js"
   },
   "author": "Alok Singh",
   "license": "ISC",
   "dependencies": {
     "babel-register": "^6.26.0",
     "express": "^4.16.3",
-    "mongoose": "^5.1.1",
-    "request": "^2.85.0"
+    "gulp-cli": "^2.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-copy": "^1.1.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-less": "^3.5.0",
+    "gulp-pug": "^4.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1"
   }
 }
