--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp; node index.js"
+    "start": "sudo gulp; node index.js"
   },
   "author": "Alok Singh",
   "license": "ISC",
