--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-copy": "^1.1.0",
     "gulp-csso": "^3.0.1",
     "gulp-less": "^3.5.0",
-    "gulp-pug": "^4.0.1"
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
